compiler/tests/fixtures/invalid/semantics/salience_role_special.viv
// Action with per-role salience referencing a special role

action bad-salience:
    roles:
        @actor:
            as: initiator
    saliences:
        roles:
            @hearer: #HIGH
